# villa-ops-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
.aws/: backend-task-def.json  frontend-task-def.json  mcp-task-def.json  nginx-task-def.json  setup-infra.sh
.aws/nginx/: Dockerfile  nginx.conf
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_owner_id_to_guests.py  d026dfaf7c4d_initial_tables_users_subscriptions_.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agent/: __init__.py  graph.py  mcp_client.py  memory.py  nodes.py  prompts.py  state.py  test_agent.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  analytics.py  auth.py  billing.py  bookings.py  chat.py  guests.py  properties.py  webhooks.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  oauth.py  passwords.py
backend/app/billing/: __init__.py  dependencies.py  plans.py  stripe_client.py  webhooks.py
backend/app/billing/scripts/: create_stripe_products.py
backend/app/mcp/: __init__.py  server.py  test_mcp_client.py
backend/app/mcp/tools/: analytics_tools.py  booking_tools.py  guest_tools.py  notification_tools.py  property_tools.py
backend/app/models/: __init__.py  booking.py  conversation.py  guest.py  llm_usage.py  property.py  subscription.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  billing.py  booking.py  chat.py  guest.py  property.py
backend/app/services/: __init__.py  subscription_service.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py
backend/tests/test_agent/: test_agent_tools.py  test_memory.py  test_nodes.py
backend/tests/test_api/: test_analytics.py  test_auth_endpoints.py  test_bookings.py  test_chat_conversations.py  test_guests.py  test_properties.py
backend/tests/test_auth/: test_auth_endpoints.py  test_dependencies.py  test_jwt.py  test_oauth_helpers.py  test_passwords.py
backend/tests/test_billing/: test_billing_api.py  test_plan_gating.py  test_stripe_integration.py  test_subscription_service.py  test_webhook_handlers.py
backend/tests/test_mcp/: test_mcp_tools.py
backend/tests/test_services/: test_subscription_service_extended.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
scripts/: dev.sh  sync.sh
(+45 files in other folders)
